// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders Modal correctly 1`] = `
<span
  className="ms-layer"
>
  <div
    className=
        ms-Fabric
        ms-Layer-content
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #333333;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          visibility: visible;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
        button {
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          overflow: visible;
        }
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDoubleClick={[Function]}
    onDrag={[Function]}
    onDragEnd={[Function]}
    onDragEnter={[Function]}
    onDragExit={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDragStart={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onMouseUp={[Function]}
    onSubmit={[Function]}
  >
    <div
      aria-modal={true}
      onKeyDown={[Function]}
      role="dialog"
      style={
        Object {
          "outline": "none",
          "overflowY": undefined,
        }
      }
    >
      <div
        className=
            ms-Modal
            is-open
            test-className
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              background-color: transparent;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 100%;
              justify-content: center;
              opacity: 1;
              pointer-events: auto;
              position: fixed;
              transition: opacity 0.267s;
              width: 100%;
            }
      >
        <div
          className=
              ms-Overlay
              ms-Overlay--dark
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                background-color: rgba(0,0,0,.4);
                bottom: 0px;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                left: 0px;
                position: absolute;
                right: 0px;
                top: 0px;
              }
              @media screen and (-ms-high-contrast: active){& {
                border: 1px solid WindowText;
                opacity: 0;
              }
        />
        <div
          className=
              ms-Dialog-main
              test-containerClassName
              {
                background-color: #ffffff;
                box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
                box-sizing: border-box;
                max-height: 100%;
                outline: 3px solid transparent;
                overflow-y: auto;
                position: relative;
                text-align: left;
              }
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
        >
          <div
            className=
                ms-Modal-scrollableContent
                {
                  flex-grow: 1;
                  overflow-y: auto;
                }
            data-is-scrollable={true}
          >
            Test Content
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Modal renders Modeless Modal correctly 1`] = `
<span
  className="ms-layer"
>
  <div
    className=
        ms-Fabric
        ms-Layer-content
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #333333;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          visibility: visible;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
        button {
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          overflow: visible;
        }
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDoubleClick={[Function]}
    onDrag={[Function]}
    onDragEnd={[Function]}
    onDragEnter={[Function]}
    onDragExit={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDragStart={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onMouseUp={[Function]}
    onSubmit={[Function]}
  >
    <div
      aria-modal={false}
      onKeyDown={[Function]}
      role="dialog"
      style={
        Object {
          "outline": "none",
          "overflowY": undefined,
        }
      }
    >
      <div
        className=
            ms-Modal
            is-open
            test-className
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              background-color: transparent;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 100%;
              justify-content: center;
              opacity: 1;
              pointer-events: auto;
              position: absolute;
              transition: opacity 0.267s;
              width: 100%;
            }
      >
        <div
          className=
              ms-Dialog-main
              test-containerClassName
              {
                background-color: #ffffff;
                box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
                box-sizing: border-box;
                max-height: 100%;
                outline: 3px solid transparent;
                overflow-y: auto;
                position: relative;
                text-align: left;
                z-index: 1000000;
              }
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
        >
          <div
            className=
                ms-Modal-scrollableContent
                {
                  flex-grow: 1;
                  overflow-y: auto;
                }
            data-is-scrollable={true}
          >
            Test Content
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;
